--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
+    "react-router": "^3.0.0"
   }
 }
